<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextIp"
        android:layout_width="227dp"
        android:layout_height="56dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/ip"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/port"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIp" />

    <Button
        android:id="@+id/button_Sauvegarder"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="88dp"
        android:text="@string/sauvegarder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort" />

    <Button
        android:id="@+id/buttonSatut"
        android:layout_width="136dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/statut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Sauvegarder" />

    <Button
        android:id="@+id/buttonControler"
        android:layout_width="149dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/controler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSatut" />

    <Button
        android:id="@+id/buttonPlanifier"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="164dp"
        android:text="@string/planifier"
        app:layout_constraintStart_toEndOf="@+id/buttonSatut"
        app:layout_constraintTop_toBottomOf="@+id/editTextPort" />

    <Button
        android:id="@+id/buttonNvl_connection"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="76dp"
        android:text="@string/nouvelle_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNtf"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:text="@string/notifier"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlanifier"
        app:layout_constraintStart_toEndOf="@+id/button_Sauvegarder" />

</androidx.constraintlayout.widget.ConstraintLayout>