<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Planifier_ulterieur">

    <TextView
        android:id="@+id/textViewptumu"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text="@string/planifier_tache_a_un_moment_ulterieur"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatut2"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/statut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewptumu" />

    <TextView
        android:id="@+id/textViewVitesse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/vitesse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatut2" />

    <TextView
        android:id="@+id/textViewDans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/dans"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinneulterieur"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnacceill4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:text="@string/acceuil"
        app:layout_constraintBottom_toTopOf="@+id/buttonhorairement2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonhorairement2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="148dp"
        android:text="@string/horairement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonsauvegarder4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="196dp"
        android:text="@string/sauvegarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerstatut4"
        android:layout_width="267dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:entries="@array/spinner_on_off"
        app:layout_constraintStart_toEndOf="@+id/textViewStatut2"
        app:layout_constraintTop_toBottomOf="@+id/textViewptumu" />

    <Spinner
        android:id="@+id/spinnerVitesse4"
        android:layout_width="284dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:entries="@array/spinner_vitesse"
        app:layout_constraintStart_toEndOf="@+id/textViewVitesse2"
        app:layout_constraintTop_toBottomOf="@+id/spinnerstatut4" />

    <Spinner
        android:id="@+id/spinneulterieur"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/spinner_duree_courte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVitesse4" />

</androidx.constraintlayout.widget.ConstraintLayout>